# mlflow

examples/docker_compose_poetry_python/: Dockerfile  docker-compose.yml  pyproject.toml
examples/docker_poetry_sklearn_wine/: README.md  docker-compose.yml
examples/docker_poetry_sklearn_wine/code/: train.py
examples/sklearn_elasticnet_wine/: README.md  pyproject.toml  train.ipynb
